--- a/src/app/_shared/modal/clone-form/clone-form.component.html
+++ b/src/app/_shared/modal/clone-form/clone-form.component.html
@@ -14,14 +14,14 @@
     <div class="form">
       <div class="form-group mb-3">
         <label class="form-label">Select App</label>
-        <select class="form-select" name="appId" (change)="loadCloneFormList(cloneFormData().appId)"
-          [(ngModel)]="cloneFormData().appId">
+        <select class="form-select" name="appId" (change)="loadCloneFormList(_cloneFormData.appId)"
+          [(ngModel)]="_cloneFormData.appId">
           @for (app of cloneAppList(); track app.id) {
             <option [ngValue]="app.id">{{app.title}}</option>
           }
         </select>
       </div>
-      @if (cloneFormData().appId) {
+      @if (_cloneFormData.appId) {
         <div class="form-group mb-3">
           <label class="form-label">Select Form *</label>
           <select class="form-select" name="formId" [(ngModel)]="cloneFormData.formId"
@@ -37,7 +37,7 @@
   </div>
   <div class="modal-footer justify-content-between">
     <button type="button" class="btn btn-round btn-secondary" (click)="dismiss()()">Close</button>
-    <button type="button" class="btn btn-round btn-primary" (click)="close()(cloneFormData)"
+    <button type="button" class="btn btn-round btn-primary" (click)="done(_cloneFormData)"
       [disabled]="cloneFormForm.invalid">
       Start Duplicate Form
     </button>
