--- a/src/app/_shared/modal/clone-screen/clone-screen.component.html
+++ b/src/app/_shared/modal/clone-screen/clone-screen.component.html
@@ -8,19 +8,19 @@
     <div class="form">
       <div class="form-group mb-3">
         <label class="form-label">Select App</label>
-        <select class="form-select" name="appId" (change)="loadCloneScreenList(cloneScreenData().appId)"
-          [(ngModel)]="cloneScreenData().appId">
+        <select class="form-select" name="appId" (change)="loadCloneScreenList(_cloneScreenData.appId)"
+          [(ngModel)]="_cloneScreenData.appId">
           @for (app of cloneAppList(); track app.id) {
             <option [ngValue]="app.id">{{app.title}}</option>
           }
         </select>
       </div>
-      @if (cloneScreenData().appId) {
+      @if (_cloneScreenData.appId) {
         <div class="form-group mb-3">
           <label class="form-label">Select Screen *</label>
-          <select class="form-select" name="screenId" [(ngModel)]="cloneScreenData().screenId"
+          <select class="form-select" name="screenId" [(ngModel)]="_cloneScreenData.screenId"
             required>
-            @for (screen of cloneScreenList; track screen.id) {
+            @for (screen of cloneScreenList(); track screen.id) {
               <option [ngValue]="screen.id">{{screen.title}} [{{screen.id}}]
               </option>
             }
@@ -31,7 +31,7 @@
   </div>
   <div class="modal-footer justify-content-between">
     <button type="button" class="btn btn-round btn-secondary" (click)="dismiss()()">Close</button>
-    <button type="button" class="btn btn-round btn-primary" (click)="close()(cloneScreenData())"
+    <button type="button" class="btn btn-round btn-primary" (click)="done(_cloneScreenData)"
       [disabled]="cloneScreenForm.invalid">
       Start Duplicate Screen
     </button>
