--- a/src/app/_shared/modal/edit-lookup-entry/edit-lookup-entry.component.html
+++ b/src/app/_shared/modal/edit-lookup-entry/edit-lookup-entry.component.html
@@ -8,7 +8,7 @@
             <div class="form-group mb-3">
                 <label class="form-label">{{lookup().x?.codeLbl??'Code'}} *</label>
                 <input type="text" class="form-control" name="code" #code="ngModel"
-                    [(ngModel)]="lookupEntry().code" required />
+                    [(ngModel)]="_lookupEntry.code" required />
                 @if (code?.invalid) {
                     <small class="form-text has-warning">
                     @if (code.errors?.required) {
@@ -21,7 +21,7 @@
         <div class="form-group mb-3">
           <label class="form-label">{{lookup().x?.nameLbl??'Name'}} *</label>
           <input type="text" class="form-control" name="name" #name="ngModel"
-            [(ngModel)]="lookupEntry().name" required />
+            [(ngModel)]="_lookupEntry.name" required />
           @if (name?.invalid) {
             <small class="form-text has-warning">
               @if (name.errors?.required) {
@@ -34,7 +34,7 @@
           <div class="form-group mb-3">
             <label class="form-label">{{lookup().x?.extraLbl??'Extra'}}</label>
             <input type="text" class="form-control" name="extra" #extra="ngModel"
-              [(ngModel)]="lookupEntry().extra" />
+              [(ngModel)]="_lookupEntry.extra" />
             @if (extra?.invalid) {
               <small class="form-text has-warning">
                 @if (extra.errors?.required) {
@@ -57,27 +57,27 @@
                     @if (e.type=='text') {
                       <input class="form-control form-control-sm" type="text"
                         name="value_{{$index}}"
-                        [(ngModel)]="lookupEntry().data[e.key]">
+                        [(ngModel)]="_lookupEntry.data[e.key]">
                     }
                     @if (e.type=='longtext') {
                       <textarea class="form-control form-control-sm"
                         name="value_{{$index}}"
-                      [(ngModel)]="lookupEntry().data[e.key]"></textarea>
+                      [(ngModel)]="_lookupEntry.data[e.key]"></textarea>
                     }
                     @if (e.type=='number') {
                       <input class="form-control form-control-sm" type="number"
                         name="value_{{$index}}"
-                        [(ngModel)]="lookupEntry().data[e.key]">
+                        [(ngModel)]="_lookupEntry.data[e.key]">
                     }
                     @if (e.type=='date') {
                       <input class="form-control form-control-sm" type="text"
                         name="value_{{$index}}"
-                        [(ngModel)]="lookupEntry().data[e.key]" (click)="d2.toggle()" ngbDatepicker
+                        [(ngModel)]="_lookupEntry.data[e.key]" (click)="d2.toggle()" ngbDatepicker
                         #d2="ngbDatepicker">
                     }
                     @if (e.type=='options') {
                       <select class="form-control form-control-sm" name="value_{{$index}}"
-                        [(ngModel)]="lookupEntry().data[e.key]">
+                        [(ngModel)]="_lookupEntry.data[e.key]">
                         @for (a of e.opts; track $index) {
                           <option [ngValue]="a">{{a}}</option>
                         }
@@ -86,24 +86,24 @@
                     @if (e.type=='lookup') {
                       <ng-select style="width:100%" class="ng-select-sm" [items]="lookupListMap[e.opts]" 
                         [virtualScroll]="true" 
-                        bindLabel="name" placeholder="No value" [(ngModel)]="lookupEntry().data[e.key]"
+                        bindLabel="name" placeholder="No value" [(ngModel)]="_lookupEntry.data[e.key]"
                         name="value_{{$index}}">
                       </ng-select>
                     }
                     @if (e.type=='file') {
                       <label class="flex-grow-1">
-                        <input type="file" [hidden]="true" (change)="uploadFile($event, lookupEntry().data, e.key)"
+                        <input type="file" [hidden]="true" (change)="uploadFile($event, _lookupEntry.data, e.key)"
                           name="file" />
                         <div class="form-control form-control-sm" style="background: white">
                           <fa-icon [icon]="['fas','upload']"></fa-icon>
-                          {{lookupEntry().data[e.key]||'Browse'}}
+                          {{_lookupEntry.data[e.key]||'Browse'}}
                         </div>
                       </label>
                     }
 
                     @if (e.type!='lookup'){
                       <button type="button" style="--bs-btn-border-color:#ddd" class="btn btn-sm btn-outline-secondary border-start-0"
-                        (click)="deleteDataRow(lookupEntry().data, e.key)">
+                        (click)="deleteDataRow(_lookupEntry.data, e.key)">
                         <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon>
                       </button>
                     }
@@ -115,19 +115,19 @@
                   <label class="form-label">{{e.key}} (orphan)</label>
 
                   <div class="input-group">
-                    @if (!isNumber(lookupEntry().data[e.key])) {
+                    @if (!isNumber(_lookupEntry.data[e.key])) {
                       <input class="form-control form-control-sm" style="width:100%" type="text"
                         name="valueorph_{{$index}}"
-                        [(ngModel)]="lookupEntry().data[e.key]">
+                        [(ngModel)]="_lookupEntry.data[e.key]">
                     }
-                    @if (isNumber(lookupEntry().data[e.key])) {
+                    @if (isNumber(_lookupEntry.data[e.key])) {
                       <input class="form-control form-control-sm" style="width:100%" type="number"
                         name="valueorph_{{$index}}"
-                        [(ngModel)]="lookupEntry().data[e.key]">
+                        [(ngModel)]="_lookupEntry.data[e.key]">
                     }
 
                     <button type="button" class="btn btn-sm btn-light"
-                      (click)="deleteDataRow(lookupEntry().data, e.key)">
+                      (click)="deleteDataRow(_lookupEntry.data, e.key)">
                       <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon>
                     </button>
                   </div>
@@ -152,27 +152,27 @@
                     @if (e.type=='text') {
                       <input class="form-control form-control-sm" style="width:100%" type="text"
                         name="value_{{$index}}"
-                        [(ngModel)]="lookupEntry().data[e.key]">
+                        [(ngModel)]="_lookupEntry.data[e.key]">
                     }
                     @if (e.type=='longtext') {
                       <textarea class="form-control form-control-sm" style="width:100%"
                         name="value_{{$index}}"
-                      [(ngModel)]="lookupEntry().data[e.key]"></textarea>
+                      [(ngModel)]="_lookupEntry.data[e.key]"></textarea>
                     }
                     @if (e.type=='number') {
                       <input class="form-control form-control-sm" style="width:100%" type="number"
                         name="value_{{$index}}"
-                        [(ngModel)]="lookupEntry().data[e.key]">
+                        [(ngModel)]="_lookupEntry.data[e.key]">
                     }
                     @if (e.type=='date') {
                       <input class="form-control form-control-sm" style="width:100%" type="text"
                         name="value_{{$index}}"
-                        [(ngModel)]="lookupEntry().data[e.key]" (click)="d2.toggle()" ngbDatepicker
+                        [(ngModel)]="_lookupEntry.data[e.key]" (click)="d2.toggle()" ngbDatepicker
                         #d2="ngbDatepicker">
                     }
                     @if (e.type=='options') {
                       <select class="form-control form-control-sm" style="width:100%" name="value_{{$index}}"
-                        [(ngModel)]="lookupEntry().data[e.key]">
+                        [(ngModel)]="_lookupEntry.data[e.key]">
                         @for (a of e.opts; track $index) {
                           <option [ngValue]="a">{{a}}</option>
                         }
@@ -181,24 +181,24 @@
                     @if (e.type=='lookup') {
                       <ng-select style="width:100%" class="ng-select-sm" [items]="lookupListMap[e.opts]" 
                         [virtualScroll]="true" 
-                        bindLabel="name" placeholder="No value" [(ngModel)]="lookupEntry().data[e.key]"
+                        bindLabel="name" placeholder="No value" [(ngModel)]="_lookupEntry.data[e.key]"
                         name="value_{{$index}}">
                       </ng-select>
                     }
                     @if (e.type=='file') {
                       <label style="width:100%">
-                        <input type="file" [hidden]="true" (change)="uploadFile($event, lookupEntry().data, e.key)"
+                        <input type="file" [hidden]="true" (change)="uploadFile($event, _lookupEntry.data, e.key)"
                           name="file" />
                         <div class="form-control form-control-sm" style="background: white">
                           <fa-icon [icon]="['fas','upload']"></fa-icon>
-                          {{lookupEntry().data[e.key]||'Browse'}}
+                          {{_lookupEntry.data[e.key]||'Browse'}}
                         </div>
                       </label>
                     }
                   </td>
                   <td style="width:30px;vertical-align:top">
                     <button type="button" class="btn btn-sm btn-light"
-                      (click)="deleteDataRow(lookupEntry().data, e.key)">
+                      (click)="deleteDataRow(_lookupEntry.data, e.key)">
                       <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon>
                     </button>
                   </td>
@@ -210,20 +210,20 @@
                     {{e.key}} (orphan)
                   </td>
                   <td>
-                    @if (!isNumber(lookupEntry().data[e.key])) {
+                    @if (!isNumber(_lookupEntry.data[e.key])) {
                       <input class="form-control form-control-sm" style="width:100%" type="text"
                         name="valueorph_{{$index}}"
-                        [(ngModel)]="lookupEntry().data[e.key]">
+                        [(ngModel)]="_lookupEntry.data[e.key]">
                     }
-                    @if (isNumber(lookupEntry().data[e.key])) {
+                    @if (isNumber(_lookupEntry.data[e.key])) {
                       <input class="form-control form-control-sm" style="width:100%" type="number"
                         name="valueorph_{{$index}}"
-                        [(ngModel)]="lookupEntry().data[e.key]">
+                        [(ngModel)]="_lookupEntry.data[e.key]">
                     }
                   </td>
                   <td>
                     <button type="button" class="btn btn-sm btn-light"
-                      (click)="deleteDataRow(lookupEntry().data, e.key)">
+                      (click)="deleteDataRow(_lookupEntry.data, e.key)">
                       <fa-icon [icon]="['fas','trash']" [fixedWidth]="true"></fa-icon>
                     </button>
                   </td>
@@ -237,8 +237,8 @@
         <div class="form-group mb-3">
           <div class="form-check form-switch mt-1">
             <input type="checkbox" class="form-check-input"
-              (change)="lookupEntry().enabled = $event.target.checked ? 1: 0"
-              [(ngModel)]="lookupEntry().enabled" name="enabled"
+              (change)="_lookupEntry.enabled = $event.target.checked ? 1: 0"
+              [(ngModel)]="_lookupEntry.enabled" name="enabled"
               id="enabled">
             <label class="form-check-label" for="enabled">Enabled</label>
           </div>
@@ -248,7 +248,7 @@
     <div class="modal-footer justify-content-between">
       <button type="button" class="btn btn-round btn-secondary" (click)="dismiss()()">Close</button>
       <button type="button" class="btn btn-round btn-primary" [disabled]="editLookupEntryForm.invalid"
-        (click)="close()(lookupEntry())">
+        (click)="done(_lookupEntry)">
         <fa-icon [icon]="['fas','plus']" [fixedWidth]="true"></fa-icon>
         Save Lookup
       </button>
