--- a/src/app/run/start/start.component.html
+++ b/src/app/run/start/start.component.html
@@ -159,7 +159,7 @@
                                           (click)="hideSb()"
                                           [class.disabled]="offline() || naviDataItem?.inactive"
                                           routerLinkActive="active">
-                                          <fa-icon [icon]="getIcon(item.icon)"
+                                          <fa-icon [icon]="item.icon|iconSplit"
                                           [fixedWidth]="true"></fa-icon>
                                           <div class="menu-text">{{item.title}}</div>
                                         </a>
@@ -172,7 +172,7 @@
                                           (click)="hideSb()"
                                           [class.disabled]="offline() || naviDataItem?.inactive"
                                           routerLinkActive="active">
-                                          <fa-icon [icon]="getIcon(item.icon)"
+                                          <fa-icon [icon]="item.icon|iconSplit"
                                           [fixedWidth]="true"></fa-icon>
                                           <div class="menu-text">{{item.title}}</div>
                                         </a>
@@ -185,7 +185,7 @@
                                           (click)="hideSb()"
                                           [class.disabled]="offline() || naviDataItem?.inactive"
                                           routerLinkActive="active">
-                                          <fa-icon [icon]="getIcon(item.icon)"
+                                          <fa-icon [icon]="item.icon|iconSplit"
                                           [fixedWidth]="true"></fa-icon>
                                           <div class="menu-text">{{item.title}}</div>
                                         </a>
@@ -196,7 +196,7 @@
                                         [routerLinkActiveOptions]="{exact: true}"
                                         [skipLocationChange]="item.x?.slc"
                                         (click)="hideSb()" routerLinkActive="active">
-                                        <fa-icon [icon]="getIcon(item.icon)" [fixedWidth]="true"></fa-icon>
+                                        <fa-icon [icon]="item.icon|iconSplit" [fixedWidth]="true"></fa-icon>
                                         <div class="menu-text">{{item.title}}</div>
                                       </a>
                                     }
@@ -205,7 +205,7 @@
                                         [routerLinkActiveOptions]="{exact: true}"
                                         [skipLocationChange]="item.x?.slc"
                                         (click)="hideSb()" routerLinkActive="active">
-                                        <fa-icon [icon]="getIcon(item.icon)" [fixedWidth]="true"></fa-icon>
+                                        <fa-icon [icon]="item.icon|iconSplit" [fixedWidth]="true"></fa-icon>
                                         <div class="menu-text">{{item.title}}</div>
                                       </a>
                                     }
@@ -214,7 +214,7 @@
                                         [routerLinkActiveOptions]="{exact: true}"
                                         [skipLocationChange]="item.x?.slc"
                                         (click)="hideSb()" routerLinkActive="active">
-                                        <fa-icon [icon]="getIcon(item.icon)" [fixedWidth]="true"></fa-icon>
+                                        <fa-icon [icon]="item.icon|iconSplit" [fixedWidth]="true"></fa-icon>
                                         <div class="menu-text">{{item.title}}</div>
                                       </a>
                                     }
@@ -223,7 +223,7 @@
                                         [routerLinkActiveOptions]="{exact: true}"
                                         [skipLocationChange]="item.x?.slc"
                                         (click)="hideSb()" routerLinkActive="active">
-                                        <fa-icon [icon]="getIcon(item.icon)" [fixedWidth]="true"></fa-icon>
+                                        <fa-icon [icon]="item.icon|iconSplit" [fixedWidth]="true"></fa-icon>
                                         <div class="menu-text">{{item.title}}</div>
                                       </a>
                                     }
@@ -232,14 +232,14 @@
                                         [routerLinkActiveOptions]="{exact: true}"
                                         [skipLocationChange]="item.x?.slc"
                                         (click)="hideSb()" routerLinkActive="active">
-                                        <fa-icon [icon]="getIcon(item.icon)" [fixedWidth]="true"></fa-icon>
+                                        <fa-icon [icon]="item.icon|iconSplit" [fixedWidth]="true"></fa-icon>
                                         <div class="menu-text">{{item.title}}</div>
                                       </a>
                                     }                                    
                                     @if (item.type=='external' || item.type=='internal') {
                                       <a [href]="compileTpl(item.url,{$this$:_this,$user$:user(), $conf$:appConfig,$base$:base, $baseUrl$:baseUrl(), $baseApi$:baseApi,$showNav$:openNav})"
                                         [target]="item.type=='external'?'_blank':''">
-                                        <fa-icon [icon]="getIcon(item.icon)"
+                                        <fa-icon [icon]="item.icon|iconSplit"
                                         [fixedWidth]="true"></fa-icon>
                                         <div class="menu-text">{{item.title}}</div>
                                       </a>
@@ -248,7 +248,7 @@
                                       <a routerLink="{{preurl()}}/start"
                                         [skipLocationChange]="item.x?.slc"
                                         (click)="hideSb()" routerLinkActive="active">
-                                        <fa-icon [icon]="getIcon(item.icon)" [fixedWidth]="true">
+                                        <fa-icon [icon]="item.icon|iconSplit" [fixedWidth]="true">
                                         </fa-icon>
                                         <div class="menu-text">{{item.title}}</div>
                                       </a>
