--- a/src/app/_shared/modal/clone-form/clone-form.component.html
+++ b/src/app/_shared/modal/clone-form/clone-form.component.html
@@ -26,7 +26,7 @@
           <label class="form-label">Select Form *</label>
           <select class="form-select" name="formId" [(ngModel)]="cloneFormData.formId"
             required>
-            @for (form of cloneFormList; track form.id) {
+            @for (form of cloneFormList(); track form.id) {
               <option [ngValue]="form.id">{{form.title}} [{{form.id}}]
               </option>
             }
